vpc1/modules/network/ngw.tf
resource "aws_eip" "vpc1_eip_1a" {
  domain = "vpc"

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-eip-1a"
    }
  )
}

resource "aws_eip" "vpc1_eip_1b" {
  domain = "vpc"

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-eip-1b"
    }
  )
}

resource "aws_nat_gateway" "vpc1_ngw_1a" {
  allocation_id = aws_eip.vpc1_eip_1a.id
  subnet_id     = aws_subnet.vpc1_public_subnet_1a.id

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-ngw-1a"
    }
  )

  depends_on = [aws_internet_gateway.vpc1_igw]
}

resource "aws_nat_gateway" "vpc1_ngw_1b" {
  allocation_id = aws_eip.vpc1_eip_1b.id
  subnet_id     = aws_subnet.vpc1_public_subnet_1b.id

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-ngw-1b"
    }
  )

  depends_on = [aws_internet_gateway.vpc1_igw]
}

resource "aws_route_table" "vpc1_private_rtb_1a" {
  vpc_id = aws_vpc.vpc1_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.vpc1_ngw_1a.id
  }

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-private-rtb-1a"
    }
  )
}

resource "aws_route_table" "vpc1_private_rtb_1b" {
  vpc_id = aws_vpc.vpc1_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.vpc1_ngw_1b.id
  }

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-private-rtb-1b"
    }
  )
}
